# china-id

./: .gitignore  Cargo.toml  README.md  chinaid.go  chinaid_test.go  go.mod
benches/: benchmark.rs
src/: lib.rs
