[package]
name = "china-id"
version = "0.1.1"
edition = "2021"
description = "A tool that can verify the validity of Chinese identity card numbers"
license = "MIT OR Apache-2.0"
authors = ["CuiPeiyu <i@cuipeiyu.com>"]
repository = "https://github.com/cuipeiyu/china-id"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1"
chrono = "0.4.31"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
