[package]
name = "china-id"
version = "0.1.3"
edition = "2021"
description = "一个中国身份证号码解析库"
license = "MIT OR Apache-2.0"
authors = ["CuiPeiyu <i@cuipeiyu.com>"]
repository = "https://github.com/cuipeiyu/china-id"
include = ["src", "README.md", "LICENSE-*", "benches"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
